--- a/shmelie/shmelie.css
+++ b/shmelie/shmelie.css
@@ -1,4 +1,4 @@
-/*BEGIN THRUSTMASTER eSWAP Controller Styling*/
+/*BEGIN custom Controller Styling*/
 
 .controller.custom{
     background: url(e swap s pro base 2.png); 
